--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Telegram Users</h1>
+    <h1>Welcome, <span id="username"></span></h1>
+    <h2>Telegram Users</h2>
     <ul id="user-list"></ul>
   </div>
   <script src="script.js"></script>
